--- a/training.html
+++ b/training.html
@@ -201,7 +201,7 @@
             `*New Training Application*\n` + 
             `*Course:* ${selectedCourse}\n` +
             `*Name:* ${name}\n` + 
-            `*Email:<span class="required">** ${email}`
+            `*Email:* ${email}`
           );
 
           const url = `https://wa.me/${phone}?text=${message}`;
