--- a/career.html
+++ b/career.html
@@ -74,9 +74,9 @@
     <div class="a4-container">
         <main>
             <section class="career-section">
-                <h1>💼 Career</h1>
+                <h2>💼 Career</h2>
                 
-                <h2>🏗️ Welcome to Dream Smart Construction</h2>
+                <h3>🏗️ Welcome to Dream Smart Construction</h3>
                 <p>
                     Dream Smart Construction is a trusted construction company delivering quality, innovation, and reliability across every project we undertake. 
                     We specialize in building strong foundations—both structurally and professionally—by combining modern construction techniques with industry expertise.
@@ -261,11 +261,11 @@
             <h2>Login</h2>
             <form id="loginForm">
                 <div class="form-group">
-                    <label for="loginEmail">Email:</label>
+                    <label for="loginEmail">Email:<span class="required">*</label>
                     <input type="email" id="loginEmail" name="email" required>
                 </div>
                 <div class="form-group">
-                    <label for="loginPassword">Password:</label>
+                    <label for="loginPassword">Password:<span class="required">*</label>
                     <input type="password" id="loginPassword" name="password" required>
                 </div>
                 <div class="form-options">
@@ -295,20 +295,20 @@
             <form id="signupForm">
                 <div class="form-row">
                     <div class="form-group">
-                        <label for="firstName">First Name:</label>
+                        <label for="firstName">First Name:<span class="required">*</label>
                         <input type="text" id="firstName" name="firstName" required>
                     </div>
                     <div class="form-group">
-                        <label for="lastName">Last Name:</label>
+                        <label for="lastName">Last Name:<span class="required">*</label>
                         <input type="text" id="lastName" name="lastName" required>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="signupEmail">Email:</label>
+                    <label for="signupEmail">Email:<span class="required">*</label>
                     <input type="email" id="signupEmail" name="email" required>
                 </div>
                 <div class="form-group">
-                    <label for="signupPhone">Phone Number:</label>
+                    <label for="signupPhone">Phone Number:<span class="required">*</label>
                     <div class="phone-input">
                         <select id="signupCountryCode" name="countryCode" required>
                             <option value="+91" selected>+91 India</option>
@@ -344,16 +344,16 @@
                 </div>
                 <div class="form-row">
                     <div class="form-group">
-                        <label for="signupPassword">Password:</label>
+                        <label for="signupPassword">Password:<span class="required">*</label>
                         <input type="password" id="signupPassword" name="password" minlength="8" required>
                     </div>
                     <div class="form-group">
-                        <label for="confirmPassword">Confirm Password:</label>
+                        <label for="confirmPassword">Confirm Password:<span class="required">*</label>
                         <input type="password" id="confirmPassword" name="confirmPassword" required>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="userType">I am a:</label>
+                    <label for="userType">I am a:<span class="required">*</label>
                     <select id="userType" name="userType" required>
                         <option value="">Select...</option>
                         <option value="client">Client</option>
