--- a/about.html
+++ b/about.html
@@ -103,8 +103,6 @@
                     <li>Recognized for operational efficiency and quality work</li>
                 </ul>
             </article>
-
-           
         </section>
 
         <!-- Partners Section -->
@@ -270,11 +268,11 @@
             <h2>Login</h2>
             <form id="loginForm">
                 <div class="form-group">
-                    <label for="loginEmail">Email:<span class="required">*<span class="required">*</label>
+                    <label for="loginEmail">Email:<span class="required">*</span></label>
                     <input type="email" id="loginEmail" name="email" required>
                 </div>
                 <div class="form-group">
-                    <label for="loginPassword">Password:<span class="required">*<span class="required">*</label>
+                    <label for="loginPassword">Password:<span class="required">*</span></label>
                     <input type="password" id="loginPassword" name="password" required>
                 </div>
                 <div class="form-options">
@@ -304,20 +302,20 @@
             <form id="signupForm">
                 <div class="form-row">
                     <div class="form-group">
-                        <label for="firstName">First Name:<span class="required">*</label>
+                        <label for="firstName">First Name:<span class="required">*</span></label>
                         <input type="text" id="firstName" name="firstName" required>
                     </div>
                     <div class="form-group">
-                        <label for="lastName">Last Name:<span class="required">*</label>
+                        <label for="lastName">Last Name:<span class="required">*</span></label>
                         <input type="text" id="lastName" name="lastName" required>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="signupEmail">Email:<span class="required">*</label>
+                    <label for="signupEmail">Email:<span class="required">*</span></label>
                     <input type="email" id="signupEmail" name="email" required>
                 </div>
                 <div class="form-group">
-                    <label for="phone">Phone Number:<span class="required">*</label>
+                    <label for="phone">Phone Number:<span class="required">*</span></label>
                     <div class="phone-input">
                         <select id="countryCode" name="countryCode" required>
                             <option value="+91" selected>+91 India</option>
@@ -353,16 +351,16 @@
                 </div>
                 <div class="form-row">
                     <div class="form-group">
-                        <label for="signupPassword">Password:<span class="required">*</label>
+                        <label for="signupPassword">Password:<span class="required">*</span></label>
                         <input type="password" id="signupPassword" name="password" minlength="8" required>
                     </div>
                     <div class="form-group">
-                        <label for="confirmPassword">Confirm Password:<span class="required"></label>
+                        <label for="confirmPassword">Confirm Password:<span class="required">*</span></label>
                         <input type="password" id="confirmPassword" name="confirmPassword" required>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="userType">I am a:<span class="required">*</label>
+                    <label for="userType">I am a:<span class="required">*</span></label>
                     <select id="userType" name="userType" required>
                         <option value="">Select...</option>
                         <option value="client">Client</option>
