--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,6 @@
           required 
           aria-required="true">
 
-
         <label for="email">Email Address <span style="color: red;">*</span></label>
         <input 
           type="email" 
@@ -101,7 +100,6 @@
           autocomplete="email"
           required 
           aria-required="true">
-
 
         <label for="mobile">Mobile Number <span style="color: red;">*</span></label>
         <div class="phone-input">
@@ -138,7 +136,6 @@
             required 
             aria-required="true">
         </div>
-     
 
         <label for="message">Your Message ✍ <span style="color: red;">*</span></label>
         <textarea 
@@ -165,15 +162,15 @@
       </div>
       <div class="contact-info">
         <div class="contact-item">
-          <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%232196F3' viewBox='0 0 24 24' width='30'%3E%3Cpath d='M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z'/%3E%3C/svg%3E" alt="" width="30" height="30">
+          <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%232196F3' viewBox='0 0 24 24' width='30'%3E%3Cpath d='M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z'/%3E%3C/svg%3E" alt="Phone icon" width="30" height="30">
           <span>+91 84279-97933 / +91 98550-91228</span>
         </div>
         <div class="contact-item">
-          <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 24 24' width='30'%3E%3Cpath d='M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z'/%3E%3C/svg%3E" alt="" width="30" height="30">
+          <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 24 24' width='30'%3E%3Cpath d='M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z'/%3E%3C/svg%3E" alt="Email icon" width="30" height="30">
           <span>dreamsmart.const108@gmail.com</span>
         </div>
         <address class="address">
-          <p>BUILDING NO - 106, PHASE - 2, VEER NAGAR, ICCHE WALA ROAD, FEROZEPUR CITY, PUNJAB 152001, INDIA</p>
+          <p>Building No - 106, Phase - 2, Veer Nagar, Ichhe Wala Road, Ferozepur City, Punjab 152001, India</p>
         </address>
       </div>
     </div>
