--- a/career.html
+++ b/career.html
@@ -174,7 +174,7 @@
                 <small style="color: #666; font-size: 0.85rem; margin-top: -0.8rem; display: block; padding-left: 1rem;">Select your desired position</small>
 
                 <button type="button" onclick="sendWhatsAppCareer()">
-                    Submit Application via WhatsApp
+                    Submit To WhatsApp
                 </button>
             </form>
         </section>
