--- a/training.html
+++ b/training.html
@@ -145,10 +145,15 @@
     </section>
   </main>
 
-  <!-- Enrollment Modal -->
+   <!-- Enrollment Modal -->
   <div class="enrollment-modal" id="enrollmentModal" role="dialog" aria-labelledby="enrollmentModalTitle" aria-modal="true" aria-hidden="true">
     <div class="enrollment-form-container">
-      <button class="modal-close" onclick="closeEnrollmentModal()" aria-label="Close enrollment modal">&times;</button>
+      <span class="close" onclick="closeEnrollmentModal()" aria-label="Close enrollment modal">&times;</span>
+      <div class="modal-logo">
+        <img src="images/logo.png" alt="Dream Smart Logo" width="60" height="60">
+        <h1>DREAM SMART</h1>
+        <p>Let's Build The Dream</p>
+      </div>
       <h2 id="enrollmentModalTitle">📝 Enrollment Form</h2>
       <h3 id="selectedCourse" style="text-align: center; color: var(--primary-orange); margin-bottom: 1.5rem;"></h3>
       
