--- a/index.html
+++ b/index.html
@@ -298,14 +298,10 @@
         <h2 class="section-title">Our Major Projects</h2>
         <div class="project-video">
             <div class="video-placeholder">
-                <video width="560" height="315" controls loop muted preload="metadata">
-                    <source src="your-video-file.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/ALhoaD2boik?si=Wzxzzy_ff9hAI7XL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </div>
     </section>
-
     <!-- Footer -->
     <footer>
         <div class="footer-content">
